y.output
Nonterminals useless in grammar

   translation_unit
   external_declaration


Terminals unused in grammar

   T_Layout
   T_Continue
   T_InOut
   T_Struct


Rules useless in grammar

  140 translation_unit: external_declaration
  141                 | translation_unit external_declaration

  142 external_declaration: function_definition
  143                     | declaration


Rules useless in parser due to conflicts

   22 function_identifier: /* empty */


State 40 conflicts: 21 shift/reduce, 1 reduce/reduce
State 48 conflicts: 1 shift/reduce
State 53 conflicts: 1 shift/reduce
State 55 conflicts: 1 shift/reduce
State 56 conflicts: 1 shift/reduce
State 57 conflicts: 1 shift/reduce
State 59 conflicts: 1 shift/reduce
State 64 conflicts: 1 shift/reduce
State 71 conflicts: 2 shift/reduce
State 75 conflicts: 1 shift/reduce
State 78 conflicts: 1 shift/reduce
State 80 conflicts: 2 shift/reduce
State 86 conflicts: 1 shift/reduce
State 91 conflicts: 1 shift/reduce
State 92 conflicts: 1 shift/reduce
State 102 conflicts: 1 shift/reduce
State 108 conflicts: 1 shift/reduce
State 109 conflicts: 1 shift/reduce
State 110 conflicts: 1 shift/reduce
State 117 conflicts: 1 shift/reduce
State 124 conflicts: 1 shift/reduce
State 126 conflicts: 1 shift/reduce
State 136 conflicts: 1 shift/reduce
State 138 conflicts: 1 shift/reduce
State 139 conflicts: 1 shift/reduce
State 140 conflicts: 1 shift/reduce
State 141 conflicts: 1 shift/reduce
State 142 conflicts: 1 shift/reduce
State 143 conflicts: 1 shift/reduce
State 144 conflicts: 1 shift/reduce
State 145 conflicts: 1 shift/reduce
State 146 conflicts: 1 shift/reduce
State 147 conflicts: 1 shift/reduce
State 148 conflicts: 1 shift/reduce
State 149 conflicts: 1 shift/reduce
State 150 conflicts: 1 shift/reduce
State 156 conflicts: 1 shift/reduce
State 159 conflicts: 1 shift/reduce
State 172 conflicts: 1 shift/reduce
State 187 conflicts: 2 shift/reduce
State 188 conflicts: 2 shift/reduce
State 189 conflicts: 2 shift/reduce
State 190 conflicts: 2 shift/reduce
State 204 conflicts: 1 shift/reduce
State 208 conflicts: 1 shift/reduce
State 209 conflicts: 1 shift/reduce
State 212 conflicts: 1 shift/reduce
State 216 conflicts: 1 shift/reduce
State 218 conflicts: 1 shift/reduce
State 219 conflicts: 1 shift/reduce
State 220 conflicts: 1 shift/reduce
State 222 conflicts: 1 shift/reduce
State 224 conflicts: 1 shift/reduce
State 228 conflicts: 1 shift/reduce
State 230 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: DeclList

    2 DeclList: DeclList declaration
    3         | declaration

    4 primary_expression: T_Identifier
    5                   | T_IntConstant
    6                   | T_FloatConstant
    7                   | T_BoolConstant
    8                   | T_LeftParen assignment_expression T_RightParen

    9 postfix_expression: primary_expression
   10                   | postfix_expression T_LeftBracket assignment_expression T_RightBracket
   11                   | function_call_generic
   12                   | postfix_expression T_Dot T_Identifier
   13                   | postfix_expression T_Inc
   14                   | postfix_expression T_Dec

   15 function_call_generic: function_call_header_with_parameters T_RightParen
   16                      | function_call_header_no_parameters T_RightParen

   17 function_call_header_no_parameters: function_call_header T_Void
   18                                   | function_call_header

   19 function_call_header_with_parameters: function_call_header assignment_expression
   20                                     | function_call_header_with_parameters T_Comma assignment_expression

   21 function_call_header: function_identifier T_LeftParen

   22 function_identifier: /* empty */

   23 unary_expression: postfix_expression
   24                 | T_Inc unary_expression
   25                 | T_Dec unary_expression
   26                 | unary_operator unary_expression

   27 unary_operator: T_Plus
   28               | T_Dash

   29 multiplicative_expression: unary_expression
   30                          | multiplicative_expression T_Star unary_expression
   31                          | multiplicative_expression T_Slash unary_expression

   32 additive_expression: multiplicative_expression
   33                    | additive_expression T_Plus multiplicative_expression
   34                    | additive_expression T_Dash multiplicative_expression

   35 relational_expression: additive_expression
   36                      | relational_expression T_LeftAngle additive_expression
   37                      | relational_expression T_RightAngle additive_expression
   38                      | relational_expression T_LessEqual additive_expression
   39                      | relational_expression T_GreaterEqual additive_expression

   40 equality_expression: relational_expression
   41                    | equality_expression T_EQ relational_expression
   42                    | equality_expression T_NE relational_expression

   43 logical_and_expression: equality_expression
   44                       | logical_and_expression T_And equality_expression

   45 logical_or_expression: logical_and_expression
   46                      | logical_or_expression T_Or logical_and_expression

   47 conditional_expression: logical_or_expression
   48                       | logical_or_expression T_Question assignment_expression T_Colon assignment_expression

   49 assignment_expression: conditional_expression
   50                      | unary_expression assignment_operator assignment_expression

   51 assignment_operator: T_Equal
   52                    | T_MulAssign
   53                    | T_DivAssign
   54                    | T_AddAssign
   55                    | T_SubAssign

   56 declaration: function_prototype T_Semicolon
   57            | function_definition
   58            | single_declaration

   59 function_prototype: function_declarator T_RightParen

   60 function_declarator: function_header
   61                    | function_header_with_parameters

   62 function_header_with_parameters: function_header parameter_declaration
   63                                | function_header_with_parameters T_Comma parameter_declaration

   64 function_header: type_specifier T_Identifier T_LeftParen
   65                | type_qualifier type_specifier T_Identifier T_LeftParen

   66 parameter_declaration: type_specifier T_Identifier

   67 single_declaration: type_specifier T_Identifier T_Semicolon
   68                   | type_qualifier type_specifier T_Identifier T_Semicolon
   69                   | type_specifier T_Identifier array_specifier T_Semicolon
   70                   | type_qualifier type_specifier T_Identifier array_specifier T_Semicolon
   71                   | type_specifier T_Identifier T_Equal assignment_expression T_Semicolon
   72                   | type_qualifier type_specifier T_Identifier T_Equal assignment_expression T_Semicolon

   73 type_qualifier: T_Const
   74               | T_In
   75               | T_Out
   76               | T_Uniform

   77 type_specifier: type_specifier_nonarray
   78               | type_specifier_nonarray array_specifier

   79 array_specifier: T_LeftBracket conditional_expression T_RightBracket

   80 type_specifier_nonarray: T_Void
   81                        | T_Float
   82                        | T_Int
   83                        | T_Uint
   84                        | T_Bool
   85                        | T_Vec2
   86                        | T_Vec3
   87                        | T_Vec4
   88                        | T_Bvec2
   89                        | T_Bvec3
   90                        | T_Bvec4
   91                        | T_Ivec2
   92                        | T_Ivec3
   93                        | T_Ivec4
   94                        | T_Uvec2
   95                        | T_Uvec3
   96                        | T_Uvec4
   97                        | T_Mat2
   98                        | T_Mat3
   99                        | T_Mat4

  100 declaration_statement: assignment_expression

  101 statement: compound_statement
  102          | simple_statement

  103 simple_statement: declaration_statement
  104                 | expression_statement
  105                 | selection_statement
  106                 | switch_statement
  107                 | case_label
  108                 | iteration_statement
  109                 | jump_statement

  110 compound_statement: T_LeftBrace T_RightBrace
  111                   | T_LeftBrace statement_list T_RightBrace
  112                   | T_LeftBrace var_decl_list T_RightBrace
  113                   | T_LeftBrace var_decl_list statement_list T_RightBrace

  114 var_decl_list: var_decl_list single_declaration
  115              | /* empty */

  116 statement_list: statement
  117               | statement_list statement

  118 expression_statement: T_Semicolon
  119                     | assignment_expression T_Semicolon

  120 selection_statement: T_If T_LeftParen assignment_expression T_RightParen statement
  121                    | T_If T_LeftParen assignment_expression T_RightParen statement T_Else statement

  122 condition: assignment_expression
  123          | type_specifier T_Identifier T_Equal assignment_expression
  124          | type_qualifier type_specifier T_Identifier T_Equal assignment_expression

  125 switch_statement: T_Switch T_LeftParen assignment_expression T_RightParen T_LeftBrace statement_list T_RightBrace

  126 case_label: T_Case assignment_expression T_Colon
  127           | T_Default T_Colon

  128 iteration_statement: T_While T_LeftParen condition T_RightParen statement
  129                    | T_Do statement T_While T_LeftParen assignment_expression T_RightParen T_Semicolon
  130                    | T_For T_LeftParen for_init_statement for_rest_statement T_RightParen statement

  131 for_init_statement: expression_statement
  132                   | declaration_statement

  133 conditionopt: condition

  134 for_rest_statement: conditionopt T_Semicolon
  135                   | conditionopt T_Semicolon assignment_expression

  136 jump_statement: T_Break T_Semicolon
  137               | T_Return T_Semicolon
  138               | T_Return assignment_expression T_Semicolon

  139 function_definition: function_prototype compound_statement


Terminals, with rules where they appear

$end (0) 0
error (256)
T_Void (258) 17 80
T_Bool (259) 84
T_Int (260) 82
T_Float (261) 81
T_LessEqual (262) 38
T_GreaterEqual (263) 39
T_EQ (264) 41
T_NE (265) 42
T_LeftAngle (266) 36
T_RightAngle (267) 37
T_And (268) 44
T_Or (269) 46
T_Equal (270) 51 71 72 123 124
T_MulAssign (271) 52
T_DivAssign (272) 53
T_AddAssign (273) 54
T_SubAssign (274) 55
T_While (275) 128 129
T_For (276) 130
T_If (277) 120 121
T_Else (278) 121
T_Return (279) 137 138
T_Break (280) 136
T_Const (281) 73
T_Uniform (282) 76
T_Layout (283)
T_Continue (284)
T_Do (285) 129
T_Inc (286) 13 24
T_Dec (287) 14 25
T_Switch (288) 125
T_Case (289) 126
T_Default (290) 127
T_In (291) 74
T_Out (292) 75
T_InOut (293)
T_Mat2 (294) 97
T_Mat3 (295) 98
T_Mat4 (296) 99
T_Vec2 (297) 85
T_Vec3 (298) 86
T_Vec4 (299) 87
T_Ivec2 (300) 91
T_Ivec3 (301) 92
T_Ivec4 (302) 93
T_Bvec2 (303) 88
T_Bvec3 (304) 89
T_Bvec4 (305) 90
T_Uint (306) 83
T_Uvec2 (307) 94
T_Uvec3 (308) 95
T_Uvec4 (309) 96
T_Struct (310)
T_Semicolon (311) 56 67 68 69 70 71 72 118 119 129 134 135 136 137
    138
T_Dot (312) 12
T_Colon (313) 48 126 127
T_Question (314) 48
T_Comma (315) 20 63
T_Dash (316) 28 34
T_Plus (317) 27 33
T_Star (318) 30
T_Slash (319) 31
T_LeftParen (320) 8 21 64 65 120 121 125 128 129 130
T_RightParen (321) 8 15 16 59 120 121 125 128 129 130
T_LeftBracket (322) 10 79
T_RightBracket (323) 10 79
T_LeftBrace (324) 110 111 112 113 125
T_RightBrace (325) 110 111 112 113 125
T_Identifier (326) 4 12 64 65 66 67 68 69 70 71 72 123 124
T_IntConstant (327) 5
T_FloatConstant (328) 6
T_BoolConstant (329) 7


Nonterminals, with rules where they appear

$accept (75)
    on left: 0
Program (76)
    on left: 1, on right: 0
DeclList (77)
    on left: 2 3, on right: 1 2
primary_expression (78)
    on left: 4 5 6 7 8, on right: 9
postfix_expression (79)
    on left: 9 10 11 12 13 14, on right: 10 12 13 14 23
function_call_generic (80)
    on left: 15 16, on right: 11
function_call_header_no_parameters (81)
    on left: 17 18, on right: 16
function_call_header_with_parameters (82)
    on left: 19 20, on right: 15 20
function_call_header (83)
    on left: 21, on right: 17 18 19
function_identifier (84)
    on left: 22, on right: 21
unary_expression (85)
    on left: 23 24 25 26, on right: 24 25 26 29 30 31 50
unary_operator (86)
    on left: 27 28, on right: 26
multiplicative_expression (87)
    on left: 29 30 31, on right: 30 31 32 33 34
additive_expression (88)
    on left: 32 33 34, on right: 33 34 35 36 37 38 39
relational_expression (89)
    on left: 35 36 37 38 39, on right: 36 37 38 39 40 41 42
equality_expression (90)
    on left: 40 41 42, on right: 41 42 43 44
logical_and_expression (91)
    on left: 43 44, on right: 44 45 46
logical_or_expression (92)
    on left: 45 46, on right: 46 47 48
conditional_expression (93)
    on left: 47 48, on right: 49 79
assignment_expression (94)
    on left: 49 50, on right: 8 10 19 20 48 50 71 72 100 119 120 121
    122 123 124 125 126 129 135 138
assignment_operator (95)
    on left: 51 52 53 54 55, on right: 50
declaration (96)
    on left: 56 57 58, on right: 2 3
function_prototype (97)
    on left: 59, on right: 56 139
function_declarator (98)
    on left: 60 61, on right: 59
function_header_with_parameters (99)
    on left: 62 63, on right: 61 63
function_header (100)
    on left: 64 65, on right: 60 62
parameter_declaration (101)
    on left: 66, on right: 62 63
single_declaration (102)
    on left: 67 68 69 70 71 72, on right: 58 114
type_qualifier (103)
    on left: 73 74 75 76, on right: 65 68 70 72 124
type_specifier (104)
    on left: 77 78, on right: 64 65 66 67 68 69 70 71 72 123 124
array_specifier (105)
    on left: 79, on right: 69 70 78
type_specifier_nonarray (106)
    on left: 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97
    98 99, on right: 77 78
declaration_statement (107)
    on left: 100, on right: 103 132
statement (108)
    on left: 101 102, on right: 116 117 120 121 128 129 130
simple_statement (109)
    on left: 103 104 105 106 107 108 109, on right: 102
compound_statement (110)
    on left: 110 111 112 113, on right: 101 139
var_decl_list (111)
    on left: 114 115, on right: 112 113 114
statement_list (112)
    on left: 116 117, on right: 111 113 117 125
expression_statement (113)
    on left: 118 119, on right: 104 131
selection_statement (114)
    on left: 120 121, on right: 105
condition (115)
    on left: 122 123 124, on right: 128 133
switch_statement (116)
    on left: 125, on right: 106
case_label (117)
    on left: 126 127, on right: 107
iteration_statement (118)
    on left: 128 129 130, on right: 108
for_init_statement (119)
    on left: 131 132, on right: 130
conditionopt (120)
    on left: 133, on right: 134 135
for_rest_statement (121)
    on left: 134 135, on right: 130
jump_statement (122)
    on left: 136 137 138, on right: 109
function_definition (123)
    on left: 139, on right: 57


state 0

    0 $accept: . Program $end

    T_Void     shift, and go to state 1
    T_Bool     shift, and go to state 2
    T_Int      shift, and go to state 3
    T_Float    shift, and go to state 4
    T_Const    shift, and go to state 5
    T_Uniform  shift, and go to state 6
    T_In       shift, and go to state 7
    T_Out      shift, and go to state 8
    T_Mat2     shift, and go to state 9
    T_Mat3     shift, and go to state 10
    T_Mat4     shift, and go to state 11
    T_Vec2     shift, and go to state 12
    T_Vec3     shift, and go to state 13
    T_Vec4     shift, and go to state 14
    T_Ivec2    shift, and go to state 15
    T_Ivec3    shift, and go to state 16
    T_Ivec4    shift, and go to state 17
    T_Bvec2    shift, and go to state 18
    T_Bvec3    shift, and go to state 19
    T_Bvec4    shift, and go to state 20
    T_Uint     shift, and go to state 21
    T_Uvec2    shift, and go to state 22
    T_Uvec3    shift, and go to state 23
    T_Uvec4    shift, and go to state 24

    Program                          go to state 25
    DeclList                         go to state 26
    declaration                      go to state 27
    function_prototype               go to state 28
    function_declarator              go to state 29
    function_header_with_parameters  go to state 30
    function_header                  go to state 31
    single_declaration               go to state 32
    type_qualifier                   go to state 33
    type_specifier                   go to state 34
    type_specifier_nonarray          go to state 35
    function_definition              go to state 36


state 1

   80 type_specifier_nonarray: T_Void .

    $default  reduce using rule 80 (type_specifier_nonarray)


state 2

   84 type_specifier_nonarray: T_Bool .

    $default  reduce using rule 84 (type_specifier_nonarray)


state 3

   82 type_specifier_nonarray: T_Int .

    $default  reduce using rule 82 (type_specifier_nonarray)


state 4

   81 type_specifier_nonarray: T_Float .

    $default  reduce using rule 81 (type_specifier_nonarray)


state 5

   73 type_qualifier: T_Const .

    $default  reduce using rule 73 (type_qualifier)


state 6

   76 type_qualifier: T_Uniform .

    $default  reduce using rule 76 (type_qualifier)


state 7

   74 type_qualifier: T_In .

    $default  reduce using rule 74 (type_qualifier)


state 8

   75 type_qualifier: T_Out .

    $default  reduce using rule 75 (type_qualifier)


state 9

   97 type_specifier_nonarray: T_Mat2 .

    $default  reduce using rule 97 (type_specifier_nonarray)


state 10

   98 type_specifier_nonarray: T_Mat3 .

    $default  reduce using rule 98 (type_specifier_nonarray)


state 11

   99 type_specifier_nonarray: T_Mat4 .

    $default  reduce using rule 99 (type_specifier_nonarray)


state 12

   85 type_specifier_nonarray: T_Vec2 .

    $default  reduce using rule 85 (type_specifier_nonarray)


state 13

   86 type_specifier_nonarray: T_Vec3 .

    $default  reduce using rule 86 (type_specifier_nonarray)


state 14

   87 type_specifier_nonarray: T_Vec4 .

    $default  reduce using rule 87 (type_specifier_nonarray)


state 15

   91 type_specifier_nonarray: T_Ivec2 .

    $default  reduce using rule 91 (type_specifier_nonarray)


state 16

   92 type_specifier_nonarray: T_Ivec3 .

    $default  reduce using rule 92 (type_specifier_nonarray)


state 17

   93 type_specifier_nonarray: T_Ivec4 .

    $default  reduce using rule 93 (type_specifier_nonarray)


state 18

   88 type_specifier_nonarray: T_Bvec2 .

    $default  reduce using rule 88 (type_specifier_nonarray)


state 19

   89 type_specifier_nonarray: T_Bvec3 .

    $default  reduce using rule 89 (type_specifier_nonarray)


state 20

   90 type_specifier_nonarray: T_Bvec4 .

    $default  reduce using rule 90 (type_specifier_nonarray)


state 21

   83 type_specifier_nonarray: T_Uint .

    $default  reduce using rule 83 (type_specifier_nonarray)


state 22

   94 type_specifier_nonarray: T_Uvec2 .

    $default  reduce using rule 94 (type_specifier_nonarray)


state 23

   95 type_specifier_nonarray: T_Uvec3 .

    $default  reduce using rule 95 (type_specifier_nonarray)


state 24

   96 type_specifier_nonarray: T_Uvec4 .

    $default  reduce using rule 96 (type_specifier_nonarray)


state 25

    0 $accept: Program . $end

    $end  shift, and go to state 37


state 26

    1 Program: DeclList .
    2 DeclList: DeclList . declaration

    T_Void     shift, and go to state 1
    T_Bool     shift, and go to state 2
    T_Int      shift, and go to state 3
    T_Float    shift, and go to state 4
    T_Const    shift, and go to state 5
    T_Uniform  shift, and go to state 6
    T_In       shift, and go to state 7
    T_Out      shift, and go to state 8
    T_Mat2     shift, and go to state 9
    T_Mat3     shift, and go to state 10
    T_Mat4     shift, and go to state 11
    T_Vec2     shift, and go to state 12
    T_Vec3     shift, and go to state 13
    T_Vec4     shift, and go to state 14
    T_Ivec2    shift, and go to state 15
    T_Ivec3    shift, and go to state 16
    T_Ivec4    shift, and go to state 17
    T_Bvec2    shift, and go to state 18
    T_Bvec3    shift, and go to state 19
    T_Bvec4    shift, and go to state 20
    T_Uint     shift, and go to state 21
    T_Uvec2    shift, and go to state 22
    T_Uvec3    shift, and go to state 23
    T_Uvec4    shift, and go to state 24

    $default  reduce using rule 1 (Program)

    declaration                      go to state 38
    function_prototype               go to state 28
    function_declarator              go to state 29
    function_header_with_parameters  go to state 30
    function_header                  go to state 31
    single_declaration               go to state 32
    type_qualifier                   go to state 33
    type_specifier                   go to state 34
    type_specifier_nonarray          go to state 35
    function_definition              go to state 36


state 27

    3 DeclList: declaration .

    $default  reduce using rule 3 (DeclList)


state 28

   56 declaration: function_prototype . T_Semicolon
  139 function_definition: function_prototype . compound_statement

    T_Semicolon  shift, and go to state 39
    T_LeftBrace  shift, and go to state 40

    compound_statement  go to state 41


state 29

   59 function_prototype: function_declarator . T_RightParen

    T_RightParen  shift, and go to state 42


state 30

   61 function_declarator: function_header_with_parameters .
   63 function_header_with_parameters: function_header_with_parameters . T_Comma parameter_declaration

    T_Comma  shift, and go to state 43

    $default  reduce using rule 61 (function_declarator)


state 31

   60 function_declarator: function_header .
   62 function_header_with_parameters: function_header . parameter_declaration

    T_Void   shift, and go to state 1
    T_Bool   shift, and go to state 2
    T_Int    shift, and go to state 3
    T_Float  shift, and go to state 4
    T_Mat2   shift, and go to state 9
    T_Mat3   shift, and go to state 10
    T_Mat4   shift, and go to state 11
    T_Vec2   shift, and go to state 12
    T_Vec3   shift, and go to state 13
    T_Vec4   shift, and go to state 14
    T_Ivec2  shift, and go to state 15
    T_Ivec3  shift, and go to state 16
    T_Ivec4  shift, and go to state 17
    T_Bvec2  shift, and go to state 18
    T_Bvec3  shift, and go to state 19
    T_Bvec4  shift, and go to state 20
    T_Uint   shift, and go to state 21
    T_Uvec2  shift, and go to state 22
    T_Uvec3  shift, and go to state 23
    T_Uvec4  shift, and go to state 24

    $default  reduce using rule 60 (function_declarator)

    parameter_declaration    go to state 44
    type_specifier           go to state 45
    type_specifier_nonarray  go to state 35


state 32

   58 declaration: single_declaration .

    $default  reduce using rule 58 (declaration)


state 33

   65 function_header: type_qualifier . type_specifier T_Identifier T_LeftParen
   68 single_declaration: type_qualifier . type_specifier T_Identifier T_Semicolon
   70                   | type_qualifier . type_specifier T_Identifier array_specifier T_Semicolon
   72                   | type_qualifier . type_specifier T_Identifier T_Equal assignment_expression T_Semicolon

    T_Void   shift, and go to state 1
    T_Bool   shift, and go to state 2
    T_Int    shift, and go to state 3
    T_Float  shift, and go to state 4
    T_Mat2   shift, and go to state 9
    T_Mat3   shift, and go to state 10
    T_Mat4   shift, and go to state 11
    T_Vec2   shift, and go to state 12
    T_Vec3   shift, and go to state 13
    T_Vec4   shift, and go to state 14
    T_Ivec2  shift, and go to state 15
    T_Ivec3  shift, and go to state 16
    T_Ivec4  shift, and go to state 17
    T_Bvec2  shift, and go to state 18
    T_Bvec3  shift, and go to state 19
    T_Bvec4  shift, and go to state 20
    T_Uint   shift, and go to state 21
    T_Uvec2  shift, and go to state 22
    T_Uvec3  shift, and go to state 23
    T_Uvec4  shift, and go to state 24

    type_specifier           go to state 46
    type_specifier_nonarray  go to state 35


state 34

   64 function_header: type_specifier . T_Identifier T_LeftParen
   67 single_declaration: type_specifier . T_Identifier T_Semicolon
   69                   | type_specifier . T_Identifier array_specifier T_Semicolon
   71                   | type_specifier . T_Identifier T_Equal assignment_expression T_Semicolon

    T_Identifier  shift, and go to state 47


state 35

   77 type_specifier: type_specifier_nonarray .
   78               | type_specifier_nonarray . array_specifier

    T_LeftBracket  shift, and go to state 48

    $default  reduce using rule 77 (type_specifier)

    array_specifier  go to state 49


state 36

   57 declaration: function_definition .

    $default  reduce using rule 57 (declaration)


state 37

    0 $accept: Program $end .

    $default  accept


state 38

    2 DeclList: DeclList declaration .

    $default  reduce using rule 2 (DeclList)


state 39

   56 declaration: function_prototype T_Semicolon .

    $default  reduce using rule 56 (declaration)


state 40

  110 compound_statement: T_LeftBrace . T_RightBrace
  111                   | T_LeftBrace . statement_list T_RightBrace
  112                   | T_LeftBrace . var_decl_list T_RightBrace
  113                   | T_LeftBrace . var_decl_list statement_list T_RightBrace

    T_While          shift, and go to state 50
    T_For            shift, and go to state 51
    T_If             shift, and go to state 52
    T_Return         shift, and go to state 53
    T_Break          shift, and go to state 54
    T_Do             shift, and go to state 55
    T_Inc            shift, and go to state 56
    T_Dec            shift, and go to state 57
    T_Switch         shift, and go to state 58
    T_Case           shift, and go to state 59
    T_Default        shift, and go to state 60
    T_Semicolon      shift, and go to state 61
    T_Dash           shift, and go to state 62
    T_Plus           shift, and go to state 63
    T_LeftParen      shift, and go to state 64
    T_LeftBrace      shift, and go to state 40
    T_RightBrace     shift, and go to state 65
    T_Identifier     shift, and go to state 66
    T_IntConstant    shift, and go to state 67
    T_FloatConstant  shift, and go to state 68
    T_BoolConstant   shift, and go to state 69

    T_While          [reduce using rule 115 (var_decl_list)]
    T_For            [reduce using rule 115 (var_decl_list)]
    T_If             [reduce using rule 115 (var_decl_list)]
    T_Return         [reduce using rule 115 (var_decl_list)]
    T_Break          [reduce using rule 115 (var_decl_list)]
    T_Do             [reduce using rule 115 (var_decl_list)]
    T_Inc            [reduce using rule 115 (var_decl_list)]
    T_Dec            [reduce using rule 115 (var_decl_list)]
    T_Switch         [reduce using rule 115 (var_decl_list)]
    T_Case           [reduce using rule 115 (var_decl_list)]
    T_Default        [reduce using rule 115 (var_decl_list)]
    T_Semicolon      [reduce using rule 115 (var_decl_list)]
    T_Dash           [reduce using rule 115 (var_decl_list)]
    T_Plus           [reduce using rule 115 (var_decl_list)]
    T_LeftParen      [reduce using rule 22 (function_identifier)]
    T_LeftParen      [reduce using rule 115 (var_decl_list)]
    T_LeftBrace      [reduce using rule 115 (var_decl_list)]
    T_RightBrace     [reduce using rule 115 (var_decl_list)]
    T_Identifier     [reduce using rule 115 (var_decl_list)]
    T_IntConstant    [reduce using rule 115 (var_decl_list)]
    T_FloatConstant  [reduce using rule 115 (var_decl_list)]
    T_BoolConstant   [reduce using rule 115 (var_decl_list)]
    $default         reduce using rule 115 (var_decl_list)

    primary_expression                    go to state 70
    postfix_expression                    go to state 71
    function_call_generic                 go to state 72
    function_call_header_no_parameters    go to state 73
    function_call_header_with_parameters  go to state 74
    function_call_header                  go to state 75
    function_identifier                   go to state 76
    unary_expression                      go to state 77
    unary_operator                        go to state 78
    multiplicative_expression             go to state 79
    additive_expression                   go to state 80
    relational_expression                 go to state 81
    equality_expression                   go to state 82
    logical_and_expression                go to state 83
    logical_or_expression                 go to state 84
    conditional_expression                go to state 85
    assignment_expression                 go to state 86
    declaration_statement                 go to state 87
    statement                             go to state 88
    simple_statement                      go to state 89
    compound_statement                    go to state 90
    var_decl_list                         go to state 91
    statement_list                        go to state 92
    expression_statement                  go to state 93
    selection_statement                   go to state 94
    switch_statement                      go to state 95
    case_label                            go to state 96
    iteration_statement                   go to state 97
    jump_statement                        go to state 98


state 41

  139 function_definition: function_prototype compound_statement .

    $default  reduce using rule 139 (function_definition)


state 42

   59 function_prototype: function_declarator T_RightParen .

    $default  reduce using rule 59 (function_prototype)


state 43

   63 function_header_with_parameters: function_header_with_parameters T_Comma . parameter_declaration

    T_Void   shift, and go to state 1
    T_Bool   shift, and go to state 2
    T_Int    shift, and go to state 3
    T_Float  shift, and go to state 4
    T_Mat2   shift, and go to state 9
    T_Mat3   shift, and go to state 10
    T_Mat4   shift, and go to state 11
    T_Vec2   shift, and go to state 12
    T_Vec3   shift, and go to state 13
    T_Vec4   shift, and go to state 14
    T_Ivec2  shift, and go to state 15
    T_Ivec3  shift, and go to state 16
    T_Ivec4  shift, and go to state 17
    T_Bvec2  shift, and go to state 18
    T_Bvec3  shift, and go to state 19
    T_Bvec4  shift, and go to state 20
    T_Uint   shift, and go to state 21
    T_Uvec2  shift, and go to state 22
    T_Uvec3  shift, and go to state 23
    T_Uvec4  shift, and go to state 24

    parameter_declaration    go to state 99
    type_specifier           go to state 45
    type_specifier_nonarray  go to state 35


state 44

   62 function_header_with_parameters: function_header parameter_declaration .

    $default  reduce using rule 62 (function_header_with_parameters)


state 45

   66 parameter_declaration: type_specifier . T_Identifier

    T_Identifier  shift, and go to state 100


state 46

   65 function_header: type_qualifier type_specifier . T_Identifier T_LeftParen
   68 single_declaration: type_qualifier type_specifier . T_Identifier T_Semicolon
   70                   | type_qualifier type_specifier . T_Identifier array_specifier T_Semicolon
   72                   | type_qualifier type_specifier . T_Identifier T_Equal assignment_expression T_Semicolon

    T_Identifier  shift, and go to state 101


state 47

   64 function_header: type_specifier T_Identifier . T_LeftParen
   67 single_declaration: type_specifier T_Identifier . T_Semicolon
   69                   | type_specifier T_Identifier . array_specifier T_Semicolon
   71                   | type_specifier T_Identifier . T_Equal assignment_expression T_Semicolon

    T_Equal        shift, and go to state 102
    T_Semicolon    shift, and go to state 103
    T_LeftParen    shift, and go to state 104
    T_LeftBracket  shift, and go to state 48

    array_specifier  go to state 105


state 48

   79 array_specifier: T_LeftBracket . conditional_expression T_RightBracket

    T_Inc            shift, and go to state 56
    T_Dec            shift, and go to state 57
    T_Dash           shift, and go to state 62
    T_Plus           shift, and go to state 63
    T_LeftParen      shift, and go to state 64
    T_Identifier     shift, and go to state 66
    T_IntConstant    shift, and go to state 67
    T_FloatConstant  shift, and go to state 68
    T_BoolConstant   shift, and go to state 69

    T_LeftParen  [reduce using rule 22 (function_identifier)]

    primary_expression                    go to state 70
    postfix_expression                    go to state 71
    function_call_generic                 go to state 72
    function_call_header_no_parameters    go to state 73
    function_call_header_with_parameters  go to state 74
    function_call_header                  go to state 75
    function_identifier                   go to state 76
    unary_expression                      go to state 106
    unary_operator                        go to state 78
    multiplicative_expression             go to state 79
    additive_expression                   go to state 80
    relational_expression                 go to state 81
    equality_expression                   go to state 82
    logical_and_expression                go to state 83
    logical_or_expression                 go to state 84
    conditional_expression                go to state 107


state 49

   78 type_specifier: type_specifier_nonarray array_specifier .

    $default  reduce using rule 78 (type_specifier)


state 50

  128 iteration_statement: T_While . T_LeftParen condition T_RightParen statement

    T_LeftParen  shift, and go to state 108


state 51

  130 iteration_statement: T_For . T_LeftParen for_init_statement for_rest_statement T_RightParen statement

    T_LeftParen  shift, and go to state 109


state 52

  120 selection_statement: T_If . T_LeftParen assignment_expression T_RightParen statement
  121                    | T_If . T_LeftParen assignment_expression T_RightParen statement T_Else statement

    T_LeftParen  shift, and go to state 110


state 53

  137 jump_statement: T_Return . T_Semicolon
  138               | T_Return . assignment_expression T_Semicolon

    T_Inc            shift, and go to state 56
    T_Dec            shift, and go to state 57
    T_Semicolon      shift, and go to state 111
    T_Dash           shift, and go to state 62
    T_Plus           shift, and go to state 63
    T_LeftParen      shift, and go to state 64
    T_Identifier     shift, and go to state 66
    T_IntConstant    shift, and go to state 67
    T_FloatConstant  shift, and go to state 68
    T_BoolConstant   shift, and go to state 69

    T_LeftParen  [reduce using rule 22 (function_identifier)]

    primary_expression                    go to state 70
    postfix_expression                    go to state 71
    function_call_generic                 go to state 72
    function_call_header_no_parameters    go to state 73
    function_call_header_with_parameters  go to state 74
    function_call_header                  go to state 75
    function_identifier                   go to state 76
    unary_expression                      go to state 77
    unary_operator                        go to state 78
    multiplicative_expression             go to state 79
    additive_expression                   go to state 80
    relational_expression                 go to state 81
    equality_expression                   go to state 82
    logical_and_expression                go to state 83
    logical_or_expression                 go to state 84
    conditional_expression                go to state 85
    assignment_expression                 go to state 112


state 54

  136 jump_statement: T_Break . T_Semicolon

    T_Semicolon  shift, and go to state 113


state 55

  129 iteration_statement: T_Do . statement T_While T_LeftParen assignment_expression T_RightParen T_Semicolon

    T_While          shift, and go to state 50
    T_For            shift, and go to state 51
    T_If             shift, and go to state 52
    T_Return         shift, and go to state 53
    T_Break          shift, and go to state 54
    T_Do             shift, and go to state 55
    T_Inc            shift, and go to state 56
    T_Dec            shift, and go to state 57
    T_Switch         shift, and go to state 58
    T_Case           shift, and go to state 59
    T_Default        shift, and go to state 60
    T_Semicolon      shift, and go to state 61
    T_Dash           shift, and go to state 62
    T_Plus           shift, and go to state 63
    T_LeftParen      shift, and go to state 64
    T_LeftBrace      shift, and go to state 40
    T_Identifier     shift, and go to state 66
    T_IntConstant    shift, and go to state 67
    T_FloatConstant  shift, and go to state 68
    T_BoolConstant   shift, and go to state 69

    T_LeftParen  [reduce using rule 22 (function_identifier)]
